# ripgrep-napi

./: .gitignore  Cargo.toml  LICENSE  README.md  browser.js  flake.nix  index.d.ts  index.js  package-template.wasi-browser.js  package-template.wasi.cjs  package.json  ripgrep-napi.wasi.cjs
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts  create-samples.js
src/: lib.rs
